Include logo navbar

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
 
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Landing Page - Start Bootstrap Theme</title>
+    <title>Flight Challenge VLC</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -43,7 +43,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand topnav" href="#">Start Bootstrap</a>
+                <!-- <a class="navbar-brand topnav" href="#">Start Bootstrap</a>-->
+                <a <a class="navbar-brand topnav" title="Flight Challenge VLC" href="#"><img border="0" WIDTH="20%" src="img/logo.png" alt="Flight Challenge VLC" /></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -52,10 +53,10 @@
                         <a href="#about">About</a>
                     </li>
                     <li>
-                        <a href="#services">Services</a>
+                        <a href="#services">Pruebas</a>
                     </li>
                     <li>
-                        <a href="#contact">Contact</a>
+                        <a href="#contact">Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -73,10 +74,10 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
-                        <h1>Landing Page</h1>
-                        <h3>A Template by Start Bootstrap</h3>
+                        <h1>Flight Challenge VLC</h1>
+                        <h3>Participa en la primera competición de aviones de la Comunidad Valenciana</h3>
                         <hr class="intro-divider">
-                        <ul class="list-inline intro-social-buttons">
+                      <!--  <ul class="list-inline intro-social-buttons">
                             <li>
                                 <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
                             </li>
@@ -86,7 +87,18 @@
                             <li>
                                 <a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
                             </li>
-                        </ul>
+                        </ul> -->
+                        <ul class="list-inline intro-social-buttons">
+                              <li>
+                                  <a href="https://goo.gl/forms/yjWevPt4JlLmyr9F2" class="btn btn-default btn-lg"><i class=""></i> <span class="network-name">Inscríbete</span></a>
+                              </li>
+                              <li>
+                                  <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                              </li>
+                              <li>
+                                  <a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                              </li>
+                          </ul>
                     </div>
                 </div>
             </div>
@@ -100,6 +112,28 @@
     <!-- Page Content -->
 
 	<a  name="services"></a>
+
+  <div class="content-section-a">
+
+      <div class="container">
+          <div class="row">
+              <div class="">
+                  <hr class="section-heading-spacer">
+                  <div class="clearfix"></div>
+                  <h2 class="section-heading">¿Que es Flight Challenge VLC?</h2>
+                  <p class="lead">Propuesto como un evento que englobe a toda la comunidad universitaria de la provincia
+de Valencia y siendo pioneros en nuestra comunidad en este tipo de concursos, el equipo de
+organizadores tiene grandes expectativas con la acogida de este proyecto, viendo el éxito
+ya conseguido por nuestros asesores de EUROAVIA Terrassa, con sede en la UPC.
+Esperamos conseguir mover a todo aquel con ganas de demostrar su ingenio y de
+mancharse las manos junto con un equipo multidisciplinar, donde la curiosidad y las ganas
+de probar sus capacidades de diseño sean el combustible que les mueva en esta competición. </p>
+              </div>
+
+          </div>
+
+      </div>
+
     <div class="content-section-a">
 
         <div class="container">
