--- a/index.html
+++ b/index.html
@@ -90,13 +90,10 @@
                         </ul> -->
                         <ul class="list-inline intro-social-buttons">
                               <li>
-                                  <a href="https://goo.gl/forms/yjWevPt4JlLmyr9F2" class="btn btn-default btn-lg"><i class=""></i> <span class="network-name">Inscríbete</span></a>
+                                  <a href="https://goo.gl/forms/yjWevPt4JlLmyr9F2" class="btn btn-default btn-lg disabled"><i class=""></i> <span class="network-name">Inscríbete</span></a>
                               </li>
                               <li>
-                                  <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                              </li>
-                              <li>
-                                  <a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                                  <a href="https://www.facebook.com/flightchallengeVLC" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
                               </li>
                           </ul>
                     </div>
@@ -121,15 +118,10 @@
                   <hr class="section-heading-spacer">
                   <div class="clearfix"></div>
                   <h2 class="section-heading">¿Que es Flight Challenge VLC?</h2>
-                  <p class="lead">Propuesto como un evento que englobe a toda la comunidad universitaria de la provincia
-de Valencia y siendo pioneros en nuestra comunidad en este tipo de concursos, el equipo de
-organizadores tiene grandes expectativas con la acogida de este proyecto, viendo el éxito
-ya conseguido por nuestros asesores de EUROAVIA Terrassa, con sede en la UPC.
-Esperamos conseguir mover a todo aquel con ganas de demostrar su ingenio y de
-mancharse las manos junto con un equipo multidisciplinar, donde la curiosidad y las ganas
-de probar sus capacidades de diseño sean el combustible que les mueva en esta competición. </p>
+                  <p class="lead">El concepto de competición como es el Flight Challenge VLC, nace de las ganas de los miembros de ambas asociaciones organizadoras por expandir esta filosofía y estas ganas de aprender e innovar.
+<br><br>Partiendo de la experiencia previa de otras competiciones universitarias en algunas universidades, se presenta como una competición de prototipado de aeronaves donde se tendrá en cuenta no solamente el tiempo que permanezca en vuelo, sino también su diseño y resistencia.
+<br><br>Con un jurado profesional y llamativos premios, esta competición se convertirá en un referente que se repetirá a lo largo de los años en nuevas ediciones, y que congregará en una jornada lo mejor de nuestra comunidad universitaria. </p>
               </div>
-
           </div>
 
       </div>
@@ -141,8 +133,11 @@ de probar sus capacidades de diseño sean el combustible que les mueva en esta c
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Death to the Stock Photo:<br>Special Thanks</h2>
-                    <p class="lead">A special thanks to <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a> for providing the photographs that you see in this template. Visit their website to become a member.</p>
+                    <h2 class="section-heading">¿Quienes somos?</h2>
+                    <p class="lead">EUROAVIA Valencia es la sede de la asociación europea para estudiantes universitarios con interés en el campo de la aeronáutica y el espacio, que tiene como objetivo el complementar la formación de sus miembros desarrollando sus habilidades transversales e iniciativas en el diseño y el emprendimiento. Sus lazos con el resto de sedes europeas y el sector aeronáutico acercan la industria, la empresa y la universidad a un nexo de unión común en el que los miembros conocen de primera mano otras culturas y cómo se trabaja en otros países.
+<br><br>Por su parte, Makers UPV es una comunidad universitaria abierta a todos aquellos jóvenes ingenieros que buscan salir de las aulas y “aprender haciendo”, diseñar y construir por su cuenta.
+<br><br>Estas cualidades las hacen altamente compatibles para trabajar unidas, y es de esto de donde nació Flight Challenge VLC. Para este evento, la capacidad de organización de EUROAVIA y de construcción y diseño de Makers se verán fusionadas para sacar adelante el que será uno de los mayores eventos en nuestro campus hasta la fecha.
+</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="img/ipad.png" alt="">
@@ -155,7 +150,7 @@ de probar sus capacidades de diseño sean el combustible que les mueva en esta c
     </div>
     <!-- /.content-section-a -->
 
-    <div class="content-section-b">
+   <div class="content-section-b">
 
         <div class="container">
 
@@ -206,7 +201,7 @@ de probar sus capacidades de diseño sean el combustible que les mueva en esta c
 
             <div class="row">
                 <div class="col-lg-6">
-                    <h2>Connect to Start Bootstrap:</h2>
+                    <h2>STAY TUNED</h2>
                 </div>
                 <div class="col-lg-6">
                     <ul class="list-inline banner-social-buttons">
@@ -214,10 +209,10 @@ de probar sus capacidades de diseño sean el combustible que les mueva en esta c
                             <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
                         </li>
                         <li>
-                            <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                            <a href="https://www.facebook.com/flightchallengeVLC" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
                         </li>
                         <li>
-                            <a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                            <a href="mailto:flightchallengevlc@gmail.com"" class="btn btn-default btn-lg"><i class="fa fa-envelope fa-fw"></i> <span class="network-name">Email</span></a>
                         </li>
                     </ul>
                 </div>
@@ -251,7 +246,7 @@ de probar sus capacidades de diseño sean el combustible que les mueva en esta c
                             <a href="#contact">Contact</a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted small">Copyright &copy; Your Company 2014. All Rights Reserved</p>
+                    <p class="copyright text-muted small">Web hecha por <a href="github.com/jaimelaborda">Jaime Laborda</a>. Graficos por Maria Peña</p>
                 </div>
             </div>
         </div>
