--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         </ul> -->
                         <ul class="list-inline intro-social-buttons">
                               <li>
-                                  <a href="https://goo.gl/forms/yjWevPt4JlLmyr9F2" class="btn btn-default btn-lg disabled"><i class=""></i> <span class="network-name">Inscríbete</span></a>
+                                  <a href="https://goo.gl/forms/yjWevPt4JlLmyr9F2" class="btn btn-default btn-lg disabled"><i class="fa fa-plane"></i> <span class="network-name">Inscríbete</span></a>
                               </li>
                               <li>
                                   <a href="https://www.facebook.com/flightchallengeVLC" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
