--- a/talleres.html
+++ b/talleres.html
@@ -15,7 +15,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/landing-page.css" rel="stylesheet">
+    <link href="css/workshops-page.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -51,14 +51,11 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
+                  <li>
+                      <a href="http://flightchallengevlc.com/">Inicio</a>
+                  </li>
                     <li>
-                        <a href="https://goo.gl/forms/yjWevPt4JlLmyr9F2" class="btn btn-default btn-lg disabled"><i class="fa fa-plane"></i> <span class="network-name">Inscríbete</span></a>
-                    </li>
-                    <li>
-                        <a href="#pruebas">Pruebas</a>
-                    </li>
-                    <li>
-                        <a href="talleres.html">Talleres</a>
+                        <a href="talleres.html#">Talleres</a>
                     </li>
                     <li>
                         <a href="#contact">Contacto</a>
@@ -79,8 +76,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
-                        <h1>Flight Challenge VLC</h1>
-                        <h3>Participa en la primera competición de aviones de la Comunidad Valenciana</h3>
+                        <h1>Talleres y cursos</h1>
+                        <h3>COMING SOON</h3>
                         <hr class="intro-divider">
                       <!--  <ul class="list-inline intro-social-buttons">
                             <li>
@@ -94,12 +91,7 @@
                             </li>
                         </ul> -->
                         <ul class="list-inline intro-social-buttons">
-                              <li>
-                                  <a href="https://goo.gl/forms/yjWevPt4JlLmyr9F2" class="btn btn-default btn-lg disabled"><i class="fa fa-plane"></i> <span class="network-name">Inscríbete</span></a>
-                              </li>
-                              <li>
-                                  <a href="talleres.html" class="btn btn-default btn-lg"><i class="fa fa-wrench fa-fw"></i> <span class="network-name">Talleres</span></a>
-                              </li>
+
                               <li>
                                   <a href="https://www.facebook.com/flightchallengeVLC" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
                               </li>
@@ -115,92 +107,6 @@
     <!-- /.intro-header -->
 
     <!-- Page Content -->
-
-	<a  name="services"></a>
-
-  <div class="content-section-a">
-
-      <div class="container">
-          <div class="row">
-              <div class="">
-                  <hr class="section-heading-spacer">
-                  <div class="clearfix"></div>
-                  <h2 class="section-heading">¿Que es Flight Challenge VLC?</h2>
-                  <p class="lead">El concepto de competición como es el Flight Challenge VLC, nace de las ganas de los miembros de ambas asociaciones organizadoras por expandir esta filosofía y estas ganas de aprender e innovar.
-<br><br>Partiendo de la experiencia previa de otras competiciones universitarias en algunas universidades, se presenta como una competición de prototipado de aeronaves donde se tendrá en cuenta no solamente el tiempo que permanezca en vuelo, sino también su diseño y resistencia.
-<br><br>Con un jurado profesional y llamativos premios, esta competición se convertirá en un referente que se repetirá a lo largo de los años en nuevas ediciones, y que congregará en una jornada lo mejor de nuestra comunidad universitaria. </p>
-              </div>
-          </div>
-
-      </div>
-
-    <div class="content-section-a">
-
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-5 col-sm-6">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">¿Quienes somos?</h2>
-                    <p class="lead">EUROAVIA Valencia es la sede de la asociación europea para estudiantes universitarios con interés en el campo de la aeronáutica y el espacio, que tiene como objetivo el complementar la formación de sus miembros desarrollando sus habilidades transversales e iniciativas en el diseño y el emprendimiento. Sus lazos con el resto de sedes europeas y el sector aeronáutico acercan la industria, la empresa y la universidad a un nexo de unión común en el que los miembros conocen de primera mano otras culturas y cómo se trabaja en otros países.
-<br><br>Por su parte, Makers UPV es una comunidad universitaria abierta a todos aquellos jóvenes ingenieros que buscan salir de las aulas y “aprender haciendo”, diseñar y construir por su cuenta.
-<br><br>Estas cualidades las hacen altamente compatibles para trabajar unidas, y es de esto de donde nació Flight Challenge VLC. Para este evento, la capacidad de organización de EUROAVIA y de construcción y diseño de Makers se verán fusionadas para sacar adelante el que será uno de los mayores eventos en nuestro campus hasta la fecha.
-</p>
-                </div>
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/ipad.png" alt="">
-                </div>
-            </div>
-
-        </div>
-        <!-- /.container -->
-
-    </div>
-    <!-- /.content-section-a -->
-
-   <div class="content-section-b">
-
-        <div class="container">
-
-            <div class="row">
-                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">3D Device Mockups<br>by PSDCovers</h2>
-                    <p class="lead">Turn your 2D designs into high quality, 3D product shots in seconds using free Photoshop actions by <a target="_blank" href="http://www.psdcovers.com/">PSDCovers</a>! Visit their website to download some of their awesome, free photoshop actions!</p>
-                </div>
-                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="img/dog.png" alt="">
-                </div>
-            </div>
-
-        </div>
-        <!-- /.container -->
-
-    </div>
-    <!-- /.content-section-b -->
-
-    <div class="content-section-a">
-
-        <div class="container">
-
-            <div class="row">
-                <div class="col-lg-5 col-sm-6">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">Google Web Fonts and<br>Font Awesome Icons</h2>
-                    <p class="lead">This template features the 'Lato' font, part of the <a target="_blank" href="http://www.google.com/fonts">Google Web Font library</a>, as well as <a target="_blank" href="http://fontawesome.io">icons from Font Awesome</a>.</p>
-                </div>
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/phones.png" alt="">
-                </div>
-            </div>
-
-        </div>
-        <!-- /.container -->
-
-    </div>
-    <!-- /.content-section-a -->
 
 	<a  name="contact"></a>
     <div class="banner">
