--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
       <div class="container">
           <div class="row">
-              <div class="">
+              <div class="col-lg-10 col-sm-6">
                   <hr class="section-heading-spacer">
                   <div class="clearfix"></div>
                   <h2 class="section-heading">¿Que es Flight Challenge VLC?</h2>
@@ -148,7 +148,7 @@
 </p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/ipad.png" alt="">
+                    <img vspace="100px" class="img-responsive" src="img/makers+euro.png" alt="">
                 </div>
             </div>
 
@@ -158,6 +158,7 @@
     </div>
     <!-- /.content-section-a -->
 
+  <a  name="pruebas"></a>
    <div class="content-section-b">
 
         <div class="container">
@@ -210,6 +211,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <h2>STAY TUNED</h2>
+                    <br><h4>Escribenos un email a flightchallengevlc@gmail.com</h4>
                 </div>
                 <div class="col-lg-6">
                     <ul class="list-inline banner-social-buttons">
