--- a/index.html
+++ b/index.html
@@ -164,15 +164,19 @@
         <div class="container">
 
             <div class="row">
-                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+                <div class="col-lg-10 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">3D Device Mockups<br>by PSDCovers</h2>
-                    <p class="lead">Turn your 2D designs into high quality, 3D product shots in seconds using free Photoshop actions by <a target="_blank" href="http://www.psdcovers.com/">PSDCovers</a>! Visit their website to download some of their awesome, free photoshop actions!</p>
+                    <h2 class="section-heading">¿Que se evalua en la competición?</h2>
+                    <p class="lead">El objetivo de esta competición es el diseño y la construcción de una aeronave de vuelo libre que, impulsada por un dispositivo mecánico, tendrá que recorrer la mayor distancia posible. Además, tendrá que cumplir, estructuralmente, con ciertos requisitos de eficiencia.
+<br><br>La competición se divide en tres fases: por una parte, la prueba estructural, que se medirá mediante un ensayo de flexión en tres puntos con apoyos situados en el borde de las alas. En esta etapa se descalificarán los equipos que no logren superarla.
+<br><br>A continuación, y una vez controladas las especificaciones de cada aeronave, se procederá a la prueba de vuelo, en la que se impulsará el proyecto mediante un dispositivo mecánico desde una altura de 2’3m, realizando tres vuelos seguidos.
+<br><br>Por último, se escogerán los cinco equipos con mayor puntuación, que competirán al final de la jornada por las cinco primeras posiciones, indiferentemente de cual fuese su puntuación en entapas anteriores.
+<br><br>En este proceso se contará con cuatro áreas técnicas, en las que se realizarán las diferentes etapas: la zona de comprobación de requerimientos, la zona de la prueba estructural, la zona de preparación del vuelo y la zona de vuelo.
+<br><br>Una vez realizadas todas las fases, se procederá a la entrega de premios.
+</p>
                 </div>
-                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="img/dog.png" alt="">
-                </div>
+
             </div>
 
         </div>
@@ -181,27 +185,7 @@
     </div>
     <!-- /.content-section-b -->
 
-    <div class="content-section-a">
-
-        <div class="container">
-
-            <div class="row">
-                <div class="col-lg-5 col-sm-6">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">Google Web Fonts and<br>Font Awesome Icons</h2>
-                    <p class="lead">This template features the 'Lato' font, part of the <a target="_blank" href="http://www.google.com/fonts">Google Web Font library</a>, as well as <a target="_blank" href="http://fontawesome.io">icons from Font Awesome</a>.</p>
-                </div>
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/phones.png" alt="">
-                </div>
-            </div>
-
-        </div>
-        <!-- /.container -->
-
-    </div>
-    <!-- /.content-section-a -->
+  
 
 	<a  name="contact"></a>
     <div class="banner">
@@ -211,7 +195,8 @@
             <div class="row">
                 <div class="col-lg-6">
                     <h2>STAY TUNED</h2>
-                    <br><h4>Escribenos un email a flightchallengevlc@gmail.com</h4>
+                    <br><h4>Escribenos un email a <a href="mailto:contacto@flightchallengevlc.com">contacto@flightchallengevlc.com</a></h4>
+                    <br><h3>Partners</h3>
                 </div>
                 <div class="col-lg-6">
                     <ul class="list-inline banner-social-buttons">
@@ -222,12 +207,43 @@
                             <a href="https://www.facebook.com/flightchallengeVLC" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
                         </li>
                         <li>
-                            <a href="mailto:flightchallengevlc@gmail.com"" class="btn btn-default btn-lg"><i class="fa fa-envelope fa-fw"></i> <span class="network-name">Email</span></a>
+                            <a href="mailto:contacto@flightchallengevlc.com" class="btn btn-default btn-lg"><i class="fa fa-envelope fa-fw"></i> <span class="network-name">Email</span></a>
                         </li>
                     </ul>
                 </div>
             </div>
-
+            <div class="row">
+            <div class="col-lg-100">
+              <ul class="list-inline">
+                <li>
+                  <a target="_blank" href="https://www.facebook.com/generacionespontaneaupv"><img class="img-responsive" src="img/sponsor/ge.png" alt=""/></a>
+                </li>
+                <li>
+                  <a target="_blank" href="https://www.facebook.com/generacionespontaneaupv"><img class="img-responsive" src="img/sponsor/ge.png" alt=""/></a>
+                </li>
+                <li>
+                  <a target="_blank" href="https://www.facebook.com/generacionespontaneaupv"><img class="img-responsive" src="img/sponsor/ge.png" alt=""/></a>
+                </li>
+                <li>
+                  <a target="_blank" href="https://www.facebook.com/generacionespontaneaupv"><img class="img-responsive" src="img/sponsor/ge.png" alt=""/></a>
+                </li>
+                <li>
+                  <a target="_blank" href="https://www.facebook.com/generacionespontaneaupv"><img class="img-responsive" src="img/sponsor/ge.png" alt=""/></a>
+                </li>
+                <li>
+                  <a target="_blank" href="https://www.facebook.com/generacionespontaneaupv"><img class="img-responsive" src="img/sponsor/ge.png" alt=""/></a>
+                </li>
+                <li>
+                  <a target="_blank" href="https://www.facebook.com/generacionespontaneaupv"><img class="img-responsive" src="img/sponsor/ge.png" alt=""/></a>
+                </li>
+                <li>
+                  <a target="_blank" href="https://www.facebook.com/generacionespontaneaupv"><img class="img-responsive" src="img/sponsor/ge.png" alt=""/></a>
+                </li>
+                <li>
+                  <a target="_blank" href="https://www.facebook.com/generacionespontaneaupv"><img class="img-responsive" src="img/sponsor/ge.png" alt=""/></a>
+                </li>
+            </div>
+          </div>
         </div>
         <!-- /.container -->
 
