--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
                         <a href="talleres.html">Talleres</a>
                     </li>
                     <li>
+                      <a target="_blank" href="doc/NotadePrensa07112016.pdf">Prensa</a>
+                    </li>
+                    <li>
                         <a href="#contact">Contacto</a>
                     </li>
                 </ul>
@@ -99,6 +102,9 @@
                               </li>
                               <li>
                                   <a href="talleres.html" class="btn btn-default btn-lg"><i class="fa fa-wrench fa-fw"></i> <span class="network-name">Talleres</span></a>
+                              </li>
+                              <li>
+                                  <a target="_blank" href="doc/NotadePrensa07112016.pdf" class="btn btn-default btn-lg"><i class="fa fa-file-text fa-fw"></i> <span class="network-name">Prensa</span></a>
                               </li>
                               <li>
                                   <a href="https://www.facebook.com/flightchallengeVLC" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
@@ -185,7 +191,7 @@
     </div>
     <!-- /.content-section-b -->
 
-  
+
 
 	<a  name="contact"></a>
     <div class="banner">
@@ -216,32 +222,21 @@
             <div class="col-lg-100">
               <ul class="list-inline">
                 <li>
-                  <a target="_blank" href="https://www.facebook.com/generacionespontaneaupv"><img class="img-responsive" src="img/sponsor/ge.png" alt=""/></a>
+                  <a target="_blank" href="https://www.facebook.com/generacionespontaneaupv"><img class="img-responsive" src="img/sponsor/ge.png" alt="Generación Espontanea UPV"/></a>
                 </li>
                 <li>
-                  <a target="_blank" href="https://www.facebook.com/generacionespontaneaupv"><img class="img-responsive" src="img/sponsor/ge.png" alt=""/></a>
+                  <a target="_blank" href="http://www.etsid.upv.es/"><img class="img-responsive" src="img/sponsor/etsid.png" alt="Escuela Tecnica Superior de Ingenieria del Diseño"/></a>
                 </li>
                 <li>
-                  <a target="_blank" href="https://www.facebook.com/generacionespontaneaupv"><img class="img-responsive" src="img/sponsor/ge.png" alt=""/></a>
+                  <a target="_blank" href="http://www.upv.es/"><img class="img-responsive" src="img/sponsor/upv.png" alt="Universitat Politecnica de Valencia"/></a>
                 </li>
                 <li>
-                  <a target="_blank" href="https://www.facebook.com/generacionespontaneaupv"><img class="img-responsive" src="img/sponsor/ge.png" alt=""/></a>
+                  <a target="_blank" href="https://twitter.com/lautereventsvlc"><img class="img-responsive" src="img/sponsor/lauterevents.png" alt="Lauter Events"/></a>
                 </li>
                 <li>
-                  <a target="_blank" href="https://www.facebook.com/generacionespontaneaupv"><img class="img-responsive" src="img/sponsor/ge.png" alt=""/></a>
+                  <a target="_blank" href="http://www.leroymerlin.es/"><img class="img-responsive" src="img/sponsor/leroy.png" alt=""/></a>
                 </li>
-                <li>
-                  <a target="_blank" href="https://www.facebook.com/generacionespontaneaupv"><img class="img-responsive" src="img/sponsor/ge.png" alt=""/></a>
-                </li>
-                <li>
-                  <a target="_blank" href="https://www.facebook.com/generacionespontaneaupv"><img class="img-responsive" src="img/sponsor/ge.png" alt=""/></a>
-                </li>
-                <li>
-                  <a target="_blank" href="https://www.facebook.com/generacionespontaneaupv"><img class="img-responsive" src="img/sponsor/ge.png" alt=""/></a>
-                </li>
-                <li>
-                  <a target="_blank" href="https://www.facebook.com/generacionespontaneaupv"><img class="img-responsive" src="img/sponsor/ge.png" alt=""/></a>
-                </li>
+
             </div>
           </div>
         </div>
@@ -257,19 +252,19 @@
                 <div class="col-lg-12">
                     <ul class="list-inline">
                         <li>
-                            <a href="#">Home</a>
+                            <a href="#">Inicio</a>
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
-                            <a href="#about">About</a>
+                            <a href="#pruebas">Pruebas</a>
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
-                            <a href="#services">Services</a>
+                            <a target="_blank" href="doc/NotadePrensa07112016.pdf">Prensa</a>
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
-                            <a href="#contact">Contact</a>
+                            <a href="#contact">Contacto</a>
                         </li>
                     </ul>
                     <p class="copyright text-muted small">Web hecha por <a target="_blank" href="https://github.com/jaimelaborda">Jaime Laborda</a>. Graficos por Maria Peña</p>
