--- a/talleres.html
+++ b/talleres.html
@@ -46,7 +46,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- <a class="navbar-brand topnav" href="#">Start Bootstrap</a>-->
-                <a <a class="navbar-brand topnav" title="Flight Challenge VLC" href="#"><img border="0" WIDTH="60%" src="img/logo.png" alt="Flight Challenge VLC" /></a>
+                <a <a class="navbar-brand topnav" title="Flight Challenge VLC" href="http://flightchallengevlc.com/"><img border="0" WIDTH="60%" src="img/logo.png" alt="Flight Challenge VLC" /></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -108,70 +108,92 @@
 
     <!-- Page Content -->
 
-	<a  name="contact"></a>
-    <div class="banner">
+    <a  name="contact"></a>
+      <div class="banner">
 
-        <div class="container">
+          <div class="container">
 
-            <div class="row">
-                <div class="col-lg-6">
-                    <h2>STAY TUNED</h2>
-                </div>
-                <div class="col-lg-6">
-                    <ul class="list-inline banner-social-buttons">
-                        <li>
-                            <a href="https://twitter.com/flightVLC" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                        </li>
-                        <li>
-                            <a href="https://www.facebook.com/flightchallengeVLC" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
-                        </li>
-                        <li>
-                            <a href="mailto:flightchallengevlc@gmail.com"" class="btn btn-default btn-lg"><i class="fa fa-envelope fa-fw"></i> <span class="network-name">Email</span></a>
-                        </li>
-                    </ul>
-                </div>
+              <div class="row">
+                  <div class="col-lg-6">
+                      <h2>STAY TUNED</h2>
+                      <br><h4>Escribenos un email a <a href="mailto:contacto@flightchallengevlc.com">contacto@flightchallengevlc.com</a></h4>
+                      <br><h3>Partners</h3>
+                  </div>
+                  <div class="col-lg-6">
+                      <ul class="list-inline banner-social-buttons">
+                          <li>
+                              <a href="https://twitter.com/flightVLC" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                          </li>
+                          <li>
+                              <a href="https://www.facebook.com/flightchallengeVLC" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
+                          </li>
+                          <li>
+                              <a href="mailto:contacto@flightchallengevlc.com" class="btn btn-default btn-lg"><i class="fa fa-envelope fa-fw"></i> <span class="network-name">Email</span></a>
+                          </li>
+                      </ul>
+                  </div>
+              </div>
+              <div class="row">
+              <div class="col-lg-100">
+                <ul class="list-inline">
+                  <li>
+                    <a target="_blank" href="https://www.facebook.com/generacionespontaneaupv"><img class="img-responsive" src="img/sponsor/ge.png" alt="Generación Espontanea UPV"/></a>
+                  </li>
+                  <li>
+                    <a target="_blank" href="http://www.etsid.upv.es/"><img class="img-responsive" src="img/sponsor/etsid.png" alt="Escuela Tecnica Superior de Ingenieria del Diseño"/></a>
+                  </li>
+                  <li>
+                    <a target="_blank" href="https://twitter.com/lautereventsvlc"><img class="img-responsive" src="img/sponsor/lauterevents.png" alt="Lauter Events"/></a>
+                  </li>
+                  <!--<li>
+                    <a target="_blank" href="http://www.leroymerlin.es/"><img class="img-responsive" src="img/sponsor/leroy.png" alt=""/></a>
+                  </li>-->
+                  <li>
+                    <a target="_blank" href="http://www.upv.es/"><img class="img-responsive" src="img/sponsor/upv.png" alt="Universitat Politecnica de Valencia"/></a>
+                  </li>
+
+              </div>
             </div>
+          </div>
+          <!-- /.container -->
 
-        </div>
-        <!-- /.container -->
+      </div>
+      <!-- /.banner -->
 
-    </div>
-    <!-- /.banner -->
+      <!-- Footer -->
+      <footer>
+          <div class="container">
+              <div class="row">
+                  <div class="col-lg-12">
+                      <ul class="list-inline">
+                          <li>
+                              <a href="#">Inicio</a>
+                          </li>
+                          <li class="footer-menu-divider">&sdot;</li>
+                          <li>
+                              <a href="#pruebas">Pruebas</a>
+                          </li>
+                          <li class="footer-menu-divider">&sdot;</li>
+                          <li>
+                              <a target="_blank" href="doc/NotadePrensa07112016.pdf">Prensa</a>
+                          </li>
+                          <li class="footer-menu-divider">&sdot;</li>
+                          <li>
+                              <a href="#contact">Contacto</a>
+                          </li>
+                      </ul>
+                      <p class="copyright text-muted small">Web hecha por <a target="_blank" href="https://github.com/jaimelaborda">Jaime Laborda</a>. Graficos por Maria Peña</p>
+                  </div>
+              </div>
+          </div>
+      </footer>
 
-    <!-- Footer -->
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <ul class="list-inline">
-                        <li>
-                            <a href="#">Home</a>
-                        </li>
-                        <li class="footer-menu-divider">&sdot;</li>
-                        <li>
-                            <a href="#about">About</a>
-                        </li>
-                        <li class="footer-menu-divider">&sdot;</li>
-                        <li>
-                            <a href="#services">Services</a>
-                        </li>
-                        <li class="footer-menu-divider">&sdot;</li>
-                        <li>
-                            <a href="#contact">Contact</a>
-                        </li>
-                    </ul>
-                    <p class="copyright text-muted small">Web hecha por <a target="_blank" href="https://github.com/jaimelaborda">Jaime Laborda</a>. Graficos por Maria Peña</p>
-                </div>
-            </div>
-        </div>
-    </footer>
+      <!-- jQuery -->
+      <script src="js/jquery.js"></script>
 
-    <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+      <!-- Bootstrap Core JavaScript -->
+      <script src="js/bootstrap.min.js"></script>
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+  </body>
 
-</body>
-
-</html>
+  </html>
