arreglado error fecha

--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
                   <h2 class="section-heading">¿Que es Flight Challenge VLC?</h2>
                   <p class="lead">El concepto de competición como es el Flight Challenge VLC, nace de las ganas de los miembros de ambas asociaciones organizadoras por expandir esta filosofía y estas ganas de aprender e innovar.
 <br><br>Partiendo de la experiencia previa de otras competiciones universitarias en algunas universidades, se presenta como una competición de prototipado de aeronaves donde se tendrá en cuenta no solamente el tiempo que permanezca en vuelo, sino también su diseño y resistencia.
-<br><br>Con un jurado profesional y llamativos premios, esta competición se convertirá en un referente que se repetirá a lo largo de los años en nuevas ediciones, y que congregará en una jornada lo mejor de nuestra comunidad universitaria. </p>
-<br><br>La competición tendrá lugar el <b>1 de Diciembre</b> en la pista de atletismo de la Universitat Politècnica de València.
+<br><br>Con un jurado profesional y llamativos premios, esta competición se convertirá en un referente que se repetirá a lo largo de los años en nuevas ediciones, y que congregará en una jornada lo mejor de nuestra comunidad universitaria.
+<br><br>La competición tendrá lugar el <b>1 de Diciembre</b> en la pista de atletismo de la Universitat Politècnica de València. </p>
               </div>
           </div>
 
