--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="https://goo.gl/forms/yjWevPt4JlLmyr9F2" class="btn btn-default btn-lg disabled"><i class="fa fa-plane"></i> <span class="network-name">Inscríbete</span></a>
+                        <a href="https://goo.gl/forms/yjWevPt4JlLmyr9F2" class="btn btn-default btn-lg"><i class="fa fa-plane"></i> <span class="network-name">Inscríbete</span></a>
                     </li>
                     <li>
                         <a href="#pruebas">Pruebas</a>
@@ -98,7 +98,7 @@
                         </ul> -->
                         <ul class="list-inline intro-social-buttons">
                               <li>
-                                  <a href="https://goo.gl/forms/yjWevPt4JlLmyr9F2" class="btn btn-default btn-lg disabled"><i class="fa fa-plane"></i> <span class="network-name">Inscríbete</span></a>
+                                  <a href="https://goo.gl/forms/yjWevPt4JlLmyr9F2" class="btn btn-default btn-lg"><i class="fa fa-plane"></i> <span class="network-name">Inscríbete</span></a>
                               </li>
                               <li>
                                   <a href="talleres.html" class="btn btn-default btn-lg"><i class="fa fa-wrench fa-fw"></i> <span class="network-name">Talleres</span></a>
