--- a/index.html
+++ b/index.html
@@ -131,10 +131,12 @@
               <div class="col-lg-10 col-sm-6">
                   <hr class="section-heading-spacer">
                   <div class="clearfix"></div>
-                  <h2 class="section-heading">¿Que es Flight Challenge VLC?</h2>
-                  <p class="lead">El concepto de competición como es el Flight Challenge VLC, nace de las ganas de los miembros de ambas asociaciones organizadoras por expandir esta filosofía y estas ganas de aprender e innovar.
-<br><br>Partiendo de la experiencia previa de otras competiciones universitarias en algunas universidades, se presenta como una competición de prototipado de aeronaves donde se tendrá en cuenta no solamente el tiempo que permanezca en vuelo, sino también su diseño y resistencia.
-<br><br>Con un jurado profesional y llamativos premios, esta competición se convertirá en un referente que se repetirá a lo largo de los años en nuevas ediciones, y que congregará en una jornada lo mejor de nuestra comunidad universitaria.
+                  <h2 class="section-heading">¿Qué es el Flight Challenge VLC?</h2>
+                  <p class="lead">
+El Flight Challenge VLC es una competición de ingenierías, que nace de la colaboración entre dos asociaciones de estudiantes de la <a target="_blank" href="http://www.upv.es/">Universitat Politècnica de València</a> (UPV) , <a target="_blank" href="http://www.euroaviavalencia.com/es/">Euroavia Valencia</a> y <a href="http://makersupv.com/">MakersUPV</a>, con la intención de expandir sus filosofías de aprendizaje e innovación.
+<br><br>El concepto de competición como es el Flight Challenge VLC, nace de las ganas de los miembros de ambas asociaciones organizadoras por expandir esta filosofía y estas ganas de aprender e innovar.
+<br><br>Este evento se presenta como una competición de prototipado de aeronaves, donde se tendrán varios criterios de evaluación como el tiempo de vuelo,  diseño y resistencia.
+<br><br>Con un jurado profesional y llamativos premios, esta competición pretende convertirse en un referente y que congregará en una jornada lo mejor de nuestra comunidad universitaria en diseño aeronáutico.
 <br><br>La competición tendrá lugar el <b>1 de Diciembre</b> en la pista de atletismo de la Universitat Politècnica de València. </p>
               </div>
           </div>
@@ -150,8 +152,8 @@
                     <div class="clearfix"></div>
                     <h2 class="section-heading">¿Quienes somos?</h2>
                     <p class="lead"><a target="_blank" href="http://www.euroaviavalencia.com/es/">EUROAVIA Valencia</a> es la sede de la asociación europea para estudiantes universitarios con interés en el campo de la aeronáutica y el espacio, que tiene como objetivo el complementar la formación de sus miembros desarrollando sus habilidades transversales e iniciativas en el diseño y el emprendimiento. Sus lazos con el resto de sedes europeas y el sector aeronáutico acercan la industria, la empresa y la universidad a un nexo de unión común en el que los miembros conocen de primera mano otras culturas y cómo se trabaja en otros países.
-<br><br>Por su parte, <a href="http://makersupv.com/" target="_blank">Makers UPV</a> es una comunidad universitaria abierta a todos aquellos jóvenes ingenieros que buscan salir de las aulas y “aprender haciendo”, diseñar y construir por su cuenta.  A través de proyectos, competiciones y talleres impartidos por estudiantes con habilidades especiales, la comunidad se ve realimentada y crece. La comunidad ha obtenido atención internacional gracias a su éxito en competiciones en todo el mundo, como el premio al "Mejor Diseño Conceptual" y el premio al "Mejor Subsistema de Propulsión" con el proyecto Hyperloop UPV en la competición Hyperloop Pod Competition, entre otros.
-<br><br>Estas cualidades las hacen altamente compatibles para trabajar unidas, y es de esto de donde nació Flight Challenge VLC. Para este evento, la capacidad de organización de EUROAVIA y de construcción y diseño de Makers se verán fusionadas para sacar adelante el que será uno de los mayores eventos en nuestro campus hasta la fecha.
+<br><br>Por su parte, <a href="http://makersupv.com/" target="_blank">Makers UPV</a> es una comunidad universitaria abierta a todos aquellos jóvenes ingenieros que buscan salir de las aulas y “aprender haciendo”, diseñar y construir por su cuenta.  A través de proyectos, competiciones y talleres impartidos por estudiantes con habilidades especiales, la comunidad se ve realimentada y crece. La comunidad ha obtenido atención internacional gracias a su éxito en competiciones en todo el mundo, como el premio al "Mejor Diseño Conceptual" y el premio al "Mejor Subsistema de Propulsión" con el proyecto <a target="_blank" href="hyperloopupv.com">Hyperloop UPV</a> en la competición Hyperloop Pod Competition, entre otros.
+<br><br>Estas cualidades hacen que las dos asociaciones sean altamente compatibles para trabajar unidas y de esta idea se nutre el  Flight Challenge VLC. Para este evento, se verán fusionadas para sacar adelante la capacidad organizadora de EUROAVIA y de construcción y diseño de Makers en el que será uno de los mayores eventos en el  campus de la UPV hasta la fecha.
 </p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
@@ -174,9 +176,9 @@
                 <div class="col-lg-10 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">¿Que se evalua en la competición?</h2>
+                    <h2 class="section-heading">¿Qué se evalúa en la competición?</h2>
                     <p class="lead">El objetivo de esta competición es el diseño y la construcción de una aeronave de vuelo libre que, impulsada por un dispositivo mecánico, tendrá que recorrer la mayor distancia posible. Además, tendrá que cumplir, estructuralmente, con ciertos requisitos de eficiencia.
-<br><br>La competición se divide en tres fases: por una parte, la prueba estructural, que se medirá mediante un ensayo de flexión en tres puntos con apoyos situados en el borde de las alas. En esta etapa se descalificarán los equipos que no logren superarla.
+<br><br>La competición se divide en tres pruebas: por una parte, la prueba estructural, que se medirá mediante un ensayo de flexión en tres puntos con apoyos situados en el borde de las alas. En esta etapa se descalificarán los equipos que no logren superarla.
 <br><br>A continuación, y una vez controladas las especificaciones de cada aeronave, se procederá a la prueba de vuelo, en la que se impulsará el proyecto mediante un dispositivo mecánico desde una altura de 2’3m, realizando tres vuelos seguidos.
 <br><br>Por último, se escogerán los cinco equipos con mayor puntuación, que competirán al final de la jornada por las cinco primeras posiciones, indiferentemente de cual fuese su puntuación en entapas anteriores.
 <br><br>En este proceso se contará con cuatro áreas técnicas, en las que se realizarán las diferentes etapas: la zona de comprobación de requerimientos, la zona de la prueba estructural, la zona de preparación del vuelo y la zona de vuelo.
