--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
                         <a href="https://goo.gl/forms/yjWevPt4JlLmyr9F2" class="btn btn-default btn-lg"><i class="fa fa-plane"></i> <span class="network-name">Inscríbete</span></a>
                     </li>
                     <li>
+                        <a target="_blank" href="doc/NORMATIVA_FCVLC16.pdf">Normativa</a>
+                    </li>
+                    <li>
                         <a href="#pruebas">Pruebas</a>
                     </li>
                     <li>
@@ -107,7 +110,7 @@
                                   <a target="_blank" href="doc/NotadePrensa07112016.pdf" class="btn btn-default btn-lg"><i class="fa fa-file-text fa-fw"></i> <span class="network-name">Prensa</span></a>
                               </li>
                               <li>
-                                  <a href="https://www.facebook.com/flightchallengeVLC" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
+                                  <a target="_blank" href="doc/NORMATIVA_FCVLC16.pdf" class="btn btn-default btn-lg"><i class="fa fa-book fa-fw"></i> <span class="network-name">Normativa</span></a>
                               </li>
                           </ul>
                     </div>
