--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
                       <a target="_blank" href="doc/NotadePrensa07112016.pdf">Prensa</a>
                     </li>
                     <li>
+                        <a href="#faqs">FAQs</a>
+                    </li>
+                    <li>
                         <a href="#contact">Contacto</a>
                     </li>
                 </ul>
@@ -197,7 +200,44 @@ El Flight Challenge VLC es una competición de ingenierías, que nace de la cola
     </div>
     <!-- /.content-section-b -->
 
+    <a  name="faqs"></a>
+     <div class="content-section-b">
 
+          <div class="container">
+
+              <div class="row">
+                  <div class="col-lg-10 col-sm-6">
+                      <div class="clearfix"></div>
+                      <h2 class="section-heading">Frequently Ask Questions</h2>
+                      <p class="lead">
+                        <ul>
+                          <li><h4>¿Necesito algo de experiencia o alguna habilidad?</h4></li>
+                          <p class="lead">No se necesita ningún requisito previo, este evento se realiza principalmente para aprender e innovar.</p>
+                          <li><h4>¿Qué conocimientos son precisos para participar?</h4></li>
+                          <p class="lead">Ninguno en especial. Cualquier estudiante de un grado técnico puede participar.</p>
+                          <li><h4>¿Tengo que ser de la Universidad Politécnica de Valencia?</h4></li>
+                          <p class="lead">No, no es preciso pertenecer a la UPV.</p>
+                          <li><h4>¿Pueden participar estudiantes de cualquier grado?</h4></li>
+                          <p class="lead">Si, pueden participar estudiantes de cualquier grado, pero se recomienda que tenga relación con la ingeniería.</p>
+                          <li><h4>¿A partir de que curso se puede participar?</h4></li>
+                          <p class="lead">No importa el curso, tanto si estas empezando un grado, como si lo estas terminando, puedes participar.</p>
+                          <li><h4>No sé nada de aviones, ¿por dónde empiezo?</h4></li>
+                          <p class="lead">Búscate la vida, investiga, confía en tu equipo y en lo que sí sabes, Do It Yourself!</p>
+                          <li><h4>¿Me tengo que apuntar sólo o con un equipo?</h4></li>
+                          <p class="lead">Solo, los participantes se apuntarán de forma individual, y una vez estén todos se formarán los equipos.</p>
+                          <li><h4>¿Los materiales necesarios para la construcción del prototipo los deberemos comprar por nuestra cuenta o nos los proporcionaréis?</h4></li>
+                          <p class="lead">Se os ofrecerá la posibilidad de que compréis un starter pack, con el que tendréis el material necesario para el evento. EL material permitido lo encontraréis en la normativa de la página web.</p>
+                          <li><h4>¿Cuesta dinero?</h4></li>
+                          <p class="lead">La inscripción es de 10€</p>
+                        </ul>
+                  </div>
+
+              </div>
+
+          </div>
+          <!-- /.container -->
+
+      </div>
 
 	<a  name="contact"></a>
     <div class="banner">
