--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ El Flight Challenge VLC es una competición de ingenierías, que nace de la cola
                           <li><h4>No sé nada de aviones, ¿por dónde empiezo?</h4></li>
                           <p class="lead">Búscate la vida, investiga, confía en tu equipo y en lo que sí sabes, Do It Yourself!</p>
                           <li><h4>¿Me tengo que apuntar sólo o con un equipo?</h4></li>
-                          <p class="lead">Solo, los participantes se apuntarán de forma individual, y una vez estén todos se formarán los equipos.</p>
+                          <p class="lead">Sólo, los participantes se apuntarán de forma individual, y una vez estén todos se formarán los equipos.</p>
                           <li><h4>¿Los materiales necesarios para la construcción del prototipo los deberemos comprar por nuestra cuenta o nos los proporcionaréis?</h4></li>
                           <p class="lead">Se os ofrecerá la posibilidad de que compréis un starter pack, con el que tendréis el material necesario para el evento. EL material permitido lo encontraréis en la normativa de la página web.</p>
                           <li><h4>¿Cuesta dinero?</h4></li>
