--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <a href="https://goo.gl/forms/yjWevPt4JlLmyr9F2" class="btn btn-default btn-lg"><i class="fa fa-plane"></i> <span class="network-name">Inscríbete</span></a>
                     </li>
                     <li>
-                        <a target="_blank" href="doc/NORMATIVA_FCVLC16.pdf">Normativa</a>
+                        <a target="_blank" href="doc/NORMATIVA FCVLC16.pdf">Normativa</a>
                     </li>
                     <li>
                         <a href="#pruebas">Pruebas</a>
@@ -113,7 +113,7 @@
                                   <a target="_blank" href="doc/NotadePrensa07112016.pdf" class="btn btn-default btn-lg"><i class="fa fa-file-text fa-fw"></i> <span class="network-name">Prensa</span></a>
                               </li>
                               <li>
-                                  <a target="_blank" href="doc/NORMATIVA_FCVLC16.pdf" class="btn btn-default btn-lg"><i class="fa fa-book fa-fw"></i> <span class="network-name">Normativa</span></a>
+                                  <a target="_blank" href="doc/NORMATIVA FCVLC16.pdf" class="btn btn-default btn-lg"><i class="fa fa-book fa-fw"></i> <span class="network-name">Normativa</span></a>
                               </li>
                           </ul>
                     </div>
