Update talleres Introducción dinámica Cremades

--- a/talleres.html
+++ b/talleres.html
@@ -77,7 +77,6 @@
                 <div class="col-lg-12">
                     <div class="intro-message">
                         <h1>Talleres y cursos</h1>
-                        <h3>COMING SOON</h3>
                         <hr class="intro-divider">
                       <!--  <ul class="list-inline intro-social-buttons">
                             <li>
@@ -103,10 +102,39 @@
         </div>
         <!-- /.container -->
 
+
     </div>
     <!-- /.intro-header -->
 
     <!-- Page Content -->
+
+    <div class="content-section-a">
+
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-10 col-sm-6">
+                    <div class="clearfix"></div>
+                    <h2 class="section-heading">Taller Introducción a la dinámica de vuelo</h2>
+                    <p class="lead">
+  El pasado Miercoles 23 de Noviembre tuvo lugar la charla/taller <i>Introducción a la dinámica de vuelo</i> a cargo de Andrés Cremades
+<br><br>En el taller, Andrés nos presentó los conceptos básicos para realizar un diseño óptimo desde el punto de vista aerodinámico de un planeador. Además, se pusieron ejemplos prácticos acompañados de calculos técnicos aplicados a la geometría del avión.
+<br><br>Adjunto podéis encontrar tanto el documento que se preparó como el modelo numérico en <i>Wolfram Mathematica</i> para uso y disfrute de todos vosotros.
+</p>
+                </div>
+            </div>
+
+        </div>
+        <center>
+        <ul class="list-inline intro-social-buttons">
+              <li>
+                  <a href="doc/introduccion_planeadores_ACB.pdf" class="btn btn-default btn-lg"><i class="fa fa-book fa-fw"></i> <span class="network-name">Introducción Planeadores</span></a>
+              </li>
+              <li>
+                  <a download href="doc/doc_planeadores.nb" class="btn btn-default btn-lg"><i class="fa fa-book fa-fw"></i> <span class="network-name">Simulación Mathematica</span></a>
+              </li>
+          </ul>
+        </center>
+      </div>
 
     <a  name="contact"></a>
       <div class="banner">
