--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@ El Flight Challenge VLC es una competición de ingenierías, que nace de la cola
                             <a href="#contact">Contacto</a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted small">Web hecha por <a target="_blank" href="https://github.com/jaimelaborda">Jaime Laborda</a>. Graficos por Maria Peña</p>
+                    <p class="copyright text-muted small">Web hecha por <a target="_blank" href="https://www.linkedin.com/in/minea-licer-silvestre-b29119117">Minea Licer</a>. Graficos por Minea Licer</p>
                 </div>
             </div>
         </div>
